--- a/Source/ServiceBenchmark.SvcStack/Web.config
+++ b/Source/ServiceBenchmark.SvcStack/Web.config
@@ -5,9 +5,19 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
-    
-  <httpHandlers><add path="*" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb="*" /></httpHandlers></system.web>
-  
-<system.webServer><modules runAllManagedModulesForAllRequests="true" /><validation validateIntegratedModeConfiguration="false" /><handlers><add path="*" name="ServiceStack.Factory" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true" /></handlers></system.webServer></configuration>
+	<compilation debug="false" targetFramework="4.5" />
+	<httpRuntime targetFramework="4.5" />
+
+	<httpHandlers>
+	  <add path="*" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb="*" />
+	</httpHandlers>
+  </system.web>
+
+  <system.webServer>
+	<modules runAllManagedModulesForAllRequests="true" />
+	<validation validateIntegratedModeConfiguration="false" />
+	<handlers>
+	  <add path="*" name="ServiceStack.Factory" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true" />
+	</handlers>
+  </system.webServer>
+</configuration>
